--- a/React/My_Project/mdms/src/i18n/fr.json
+++ b/React/My_Project/mdms/src/i18n/fr.json
@@ -5,8 +5,7 @@
   "Update password": "Mettre à jour le mot de passe",
   "email": "e-mail",
   "password": "mot de passe",
-  "Remember Me": "se souvenir de moi",
-  "Login": "connexion",
-  "Login Form": "formulaire de connexion",
-  "Forgot Password": "mot de passe oublié"
+  "remember me": "se souvenir de moi",
+  "login": "connexion",
+  "forgot password": "mot de passe oublié"
 }
