--- a/React/My_Project/mdms/src/i18n/hi.json
+++ b/React/My_Project/mdms/src/i18n/hi.json
@@ -5,8 +5,7 @@
   "Update password": "पासवर्ड अपडेट करें",
   "email": "ईमेल",
   "password": "पासवर्ड",
-  "Remember Me": "मुझे याद रखें",
-  "Login": "लॉगिन",
-  "Login Form": "लॉगिन फ़ॉर्म",
-  "Forgot Password": "पासवर्ड भूल गए"
+  "remember me": "मुझे याद रखें",
+  "login": "लॉगिन",
+  "forgot password": "पासवर्ड भूल गए"
 }
